Alpha 8.1.2 - 23rd November 2021

- Elephants now yield a lot of meat when butchered (it was 0 before by accident)
- Fix for a crash with death notification when death reason is unknown

Alpha 8.1.1 - 22nd November 2021

- Fixed an issue where dwarves would not die from status effects like starvation and dehydration!
- Fix for a crash when loading the game with a displayed hint that can no longer be found

Alpha 8.1 - 20th November 2021

- Added elephants as a wild animal (beware their great strength!)
- The player's first settlement (before they're asked about the tutorial) will now auto-select a start location
- Settlers can now free themselves from being stuck under furniture while in a corner
- Creatures now wake up when attacked
- Mushrooms no longer say that they care about being watered
- Graves can now be dug when it has snowed
- Added settler name to tantrum notification
- Pause for notifications is now on by default
- Corrected the way demolition works on tiles with both furniture and a constructed floor
- Fix for a crash when a corpse is off the edge of the map somehow

Alpha 8.0.2 - 18th November 2021

- Added an option to re-enable the tutorial
- Fix for a crash when clicking on the broken shield notification
- Fix for a crash that could happen while having a tantrum near the map edge
- Fix for a crash when a dwarf is sleeping and has somehow been pushed out of the edge of the map

Alpha 8.0.1 - 10th November 2021

- Fix for crafting jobs which got stuck with an inaccessible job location

Alpha 8 - 9th November 2021

- Reworked HUMANOID entities into more generic CREATURE entity type
- Settlers at very low happiness will now have several tantrums (attacking a nearby creature or furniture) before breaking and giving up on life
- Added "Race" type for creatures containing new data
- Definitions of body structure and organs for different races