@@ -1,3 +1,7 @@
+Alpha 8.1.3 - 24th November 2021
+
+- Fix for a rare problem where mining could cause a pathfinding check to spiral out of control and eat all available memory
+
 Alpha 8.1.2 - 23rd November 2021
 
 - Elephants now yield a lot of meat when butchered (it was 0 before by accident)
